# SemiconductorDesign

./: CMakeLists.txt  vcpkg.json
src/: circuit_manager.h  main.cpp
src/parser/: circuit_element.cpp  circuit_element.h  spice_parser.cpp  spice_parser.h
src/simulation/: dc_analysis.cpp  dc_analysis.h  transient_analysis.cpp  transient_analysis.h
windows_build/Release/: imgui.ini
